// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with dark background 1`] = `
.c1 {
  max-width: 120rem;
  margin: 0 auto;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background: #0A1128;
  color: #FFFFFF;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1>
      children
    </h1>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with light background 1`] = `
.c1 {
  max-width: 120rem;
  margin: 0 auto;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1>
      children
    </h1>
  </div>
</div>
`;
